# ad-script-writing-agent

./: .env.example  .gitignore  README.md  app.py  main.py  product-main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: processing.py  results.py  variations.py
response/: audience_insight.md
src/agent/: copywriting_guideline copy.yaml  copywriting_guideline.yaml  graph.py  prompt_id_ds.py  prompts.py  state.py  test.ipynb  test_audience_insight_fix.ipynb  utils.py
src/agent/nodes/: audience_insight.py  creative_strategy.py  script_evaluator.py  script_generator.py  script_refiner.py  variation_evaluator.py  variation_generator.py  variation_refiner.py
src/agent/unused/: prompts-id.py
src/config/: config.py  logging_config.py  logging_config.yaml
src/ui_components/: display.py  forms.py  utils.py
