[project]
name = "ad-script-writing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "langchain-core~=0.3.68",
    "langchain-google-genai>=2.1.12",
    "langchain-openai~=0.3.27",
    "langgraph~=0.5.2",
    "langgraph-checkpoint-mongodb>=0.2.1",
    "pydantic~=2.11.7",
    "pydantic-settings~=2.10.1",
    "pymongo>=4.15.5",
    "python-json-logger>=4.0.0",
    "pyyaml~=6.0.2",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
]
